fixed problem with wrapper that was causing problems w twice-wrapped elements

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -168,7 +168,8 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: $content-width;
+    box-sizing: content-box;
+    width: $content-width;
     margin-left: auto;
     margin-right: auto;
     padding-left: $spacing-unit;
